SSM-3580: fixed by no longer supporting invalid multi value variable referenced within the AttributeValue dialog. Progress on [1]. Added support for XML and mixed content in the AttributeValue element generated. Added test coverage for existing code and enhancements. [1] - http://sarek/mediawiki/index.php?title=SAML_Protocol_Attribute_Query#Attribute_Properties
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@29660 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/console/src/main/java/com/l7tech/console/panels/resources/SamlAttributeDialog.form
+++ b/modules/gateway/console/src/main/java/com/l7tech/console/panels/resources/SamlAttributeDialog.form
@@ -3,7 +3,7 @@
   <grid id="a4abd" binding="mainPanel" layout-manager="GridLayoutManager" row-count="8" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="12" left="12" bottom="12" right="12"/>
     <constraints>
-      <xy x="32" y="62" width="560" height="399"/>
+      <xy x="32" y="62" width="560" height="528"/>
     </constraints>
     <properties/>
     <border type="none"/>
@@ -48,58 +48,6 @@
           <toolTipText resource-bundle="com/l7tech/console/panels/saml/resources/EditAttributeDialog" key="attributeNamespaceField.tooltip"/>
         </properties>
       </component>
-      <grid id="160ce" layout-manager="GridLayoutManager" row-count="3" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-        <margin top="0" left="0" bottom="0" right="0"/>
-        <constraints>
-          <grid row="5" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties>
-          <toolTipText resource-bundle="com/l7tech/console/panels/saml/resources/EditAttributeDialog" key="attributeValueField.tooltip"/>
-        </properties>
-        <border type="none" title-resource-bundle="com/l7tech/console/panels/saml/resources/EditAttributeDialog" title-key="attributeValueField.label"/>
-        <children>
-          <component id="2e05a" class="javax.swing.JRadioButton" binding="specificValueRadio">
-            <constraints>
-              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="9" fill="0" indent="0" use-parent-layout="false"/>
-            </constraints>
-            <properties>
-              <text value="Specific &amp;value:"/>
-            </properties>
-          </component>
-          <component id="1d90a" class="javax.swing.JRadioButton" binding="anyValueRadio">
-            <constraints>
-              <grid row="1" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-            </constraints>
-            <properties>
-              <text value="Allow &amp;any non-empty value"/>
-            </properties>
-          </component>
-          <component id="589fa" class="javax.swing.JCheckBox" binding="repeatIfMultivaluedCheckBox" default-binding="true">
-            <constraints>
-              <grid row="2" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-            </constraints>
-            <properties>
-              <text value="Repeat if &amp;Multivalued"/>
-            </properties>
-          </component>
-          <scrollpane id="22699">
-            <constraints>
-              <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
-            </constraints>
-            <properties/>
-            <border type="none"/>
-            <children>
-              <component id="12f40" class="javax.swing.JTextArea" binding="attributeValueField">
-                <constraints/>
-                <properties>
-                  <rows value="4"/>
-                  <toolTipText resource-bundle="com/l7tech/console/panels/saml/resources/EditAttributeDialog" key="attributeValueField.tooltip"/>
-                </properties>
-              </component>
-            </children>
-          </scrollpane>
-        </children>
-      </grid>
       <grid id="50cf2" layout-manager="GridLayoutManager" row-count="1" column-count="4" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
@@ -205,6 +153,109 @@
               <enabled value="false"/>
             </properties>
           </component>
+        </children>
+      </grid>
+      <grid id="dca88" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+        <margin top="0" left="0" bottom="0" right="0"/>
+        <constraints>
+          <grid row="5" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties/>
+        <border type="none"/>
+        <children>
+          <grid id="160ce" layout-manager="GridLayoutManager" row-count="4" column-count="6" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+            <margin top="0" left="0" bottom="0" right="0"/>
+            <constraints>
+              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <toolTipText resource-bundle="com/l7tech/console/panels/saml/resources/EditAttributeDialog" key="attributeValueField.tooltip"/>
+            </properties>
+            <border type="none" title-resource-bundle="com/l7tech/console/panels/saml/resources/EditAttributeDialog" title-key="attributeValueField.label"/>
+            <children>
+              <grid id="892f8" layout-manager="GridLayoutManager" row-count="2" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+                <margin top="0" left="0" bottom="0" right="0"/>
+                <constraints>
+                  <grid row="0" column="0" row-span="2" col-span="6" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties/>
+                <border type="none"/>
+                <children>
+                  <component id="2e05a" class="javax.swing.JRadioButton" binding="specificValueRadio">
+                    <constraints>
+                      <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="9" fill="0" indent="0" use-parent-layout="false"/>
+                    </constraints>
+                    <properties>
+                      <text value="Specific &amp;value:"/>
+                    </properties>
+                  </component>
+                  <component id="1d90a" class="javax.swing.JRadioButton" binding="anyValueRadio">
+                    <constraints>
+                      <grid row="1" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                    </constraints>
+                    <properties>
+                      <text value="Allow &amp;any non-empty value"/>
+                    </properties>
+                  </component>
+                  <scrollpane id="22699">
+                    <constraints>
+                      <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+                    </constraints>
+                    <properties/>
+                    <border type="none"/>
+                    <children>
+                      <component id="12f40" class="javax.swing.JTextArea" binding="attributeValueField">
+                        <constraints/>
+                        <properties>
+                          <rows value="4"/>
+                          <toolTipText resource-bundle="com/l7tech/console/panels/saml/resources/EditAttributeDialog" key="attributeValueField.tooltip"/>
+                        </properties>
+                      </component>
+                    </children>
+                  </scrollpane>
+                </children>
+              </grid>
+              <grid id="5ba88" layout-manager="GridLayoutManager" row-count="1" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+                <margin top="0" left="0" bottom="0" right="0"/>
+                <constraints>
+                  <grid row="2" column="0" row-span="1" col-span="6" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties/>
+                <border type="none"/>
+                <children>
+                  <component id="a22d1" class="javax.swing.JLabel">
+                    <constraints>
+                      <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false">
+                        <preferred-size width="246" height="14"/>
+                      </grid>
+                    </constraints>
+                    <properties>
+                      <text value="If Message or Element variable referenced:"/>
+                    </properties>
+                  </component>
+                  <component id="1b348" class="javax.swing.JComboBox" binding="msgElmBehaviorComboBox">
+                    <constraints>
+                      <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
+                    </constraints>
+                    <properties>
+                      <model>
+                        <item value="Convert to string"/>
+                        <item value="Add as XML fragment"/>
+                      </model>
+                    </properties>
+                  </component>
+                </children>
+              </grid>
+              <component id="589fa" class="javax.swing.JCheckBox" binding="repeatIfMultivaluedCheckBox" default-binding="true">
+                <constraints>
+                  <grid row="3" column="0" row-span="1" col-span="6" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties>
+                  <text value="Repeat if &amp;Multivalued"/>
+                </properties>
+              </component>
+            </children>
+          </grid>
         </children>
       </grid>
     </children>
