--- a/modules/gateway/assertions/SshAssertion/src/main/java/com/l7tech/external/assertions/ssh/console/SftpPollingListenerPropertiesDialog.form
+++ b/modules/gateway/assertions/SshAssertion/src/main/java/com/l7tech/external/assertions/ssh/console/SftpPollingListenerPropertiesDialog.form
@@ -258,7 +258,7 @@
                           <grid row="1" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
                         </constraints>
                         <properties>
-                          <text value="Manage Passwords"/>
+                          <text value="Manage Stored Passwords"/>
                         </properties>
                       </component>
                       <hspacer id="20c70">
