--- a/modules/gateway/assertions/SshAssertion/src/main/java/com/l7tech/external/assertions/ssh/console/SshRouteAssertionPropertiesPanel.form
+++ b/modules/gateway/assertions/SshAssertion/src/main/java/com/l7tech/external/assertions/ssh/console/SshRouteAssertionPropertiesPanel.form
@@ -496,7 +496,7 @@
                               <grid row="1" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                             </constraints>
                             <properties>
-                              <text value="Manage Passwords"/>
+                              <text resource-bundle="com/l7tech/external/assertions/ssh/console/SshRouteAssertionPropertiesPanel" key="manageStoredPasswordsLabel"/>
                             </properties>
                           </component>
                           <hspacer id="e6dd5">
