--- a/modules/gateway/console/src/main/java/com/l7tech/console/panels/resources/SamlAttributeDialog.form
+++ b/modules/gateway/console/src/main/java/com/l7tech/console/panels/resources/SamlAttributeDialog.form
@@ -215,7 +215,7 @@
                   </scrollpane>
                 </children>
               </grid>
-              <grid id="5ba88" layout-manager="GridLayoutManager" row-count="1" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+              <grid id="5ba88" layout-manager="GridLayoutManager" row-count="2" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
                 <margin top="0" left="0" bottom="0" right="0"/>
                 <constraints>
                   <grid row="2" column="0" row-span="1" col-span="6" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -223,7 +223,7 @@
                 <properties/>
                 <border type="none"/>
                 <children>
-                  <component id="a22d1" class="javax.swing.JLabel">
+                  <component id="a22d1" class="javax.swing.JLabel" binding="msgElmBehaviorLabel">
                     <constraints>
                       <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false">
                         <preferred-size width="246" height="14"/>
@@ -238,10 +238,23 @@
                       <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
                     </constraints>
                     <properties>
-                      <model>
-                        <item value="Convert to string"/>
-                        <item value="Add as XML fragment"/>
-                      </model>
+                      <model/>
+                    </properties>
+                  </component>
+                  <component id="94870" class="javax.swing.JComboBox" binding="attValueComparisonComboBox">
+                    <constraints>
+                      <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
+                    </constraints>
+                    <properties/>
+                  </component>
+                  <component id="7795" class="javax.swing.JLabel" binding="attValueComparisonLabel">
+                    <constraints>
+                      <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false">
+                        <preferred-size width="250" height="14"/>
+                      </grid>
+                    </constraints>
+                    <properties>
+                      <text value="Attribute Value Comparison:"/>
                     </properties>
                   </component>
                 </children>
