--- a/modules/gateway/assertions/SshAssertion/src/main/java/com/l7tech/external/assertions/ssh/console/SshRouteAssertionPropertiesPanel.form
+++ b/modules/gateway/assertions/SshAssertion/src/main/java/com/l7tech/external/assertions/ssh/console/SshRouteAssertionPropertiesPanel.form
@@ -451,7 +451,7 @@
                         <properties/>
                         <border type="etched"/>
                         <children>
-                          <component id="d097c" class="javax.swing.JRadioButton" binding="usernamePasswordRadioButton">
+                          <component id="d097c" class="javax.swing.JRadioButton" binding="passwordRadioButton">
                             <constraints>
                               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                             </constraints>
