Update icon, fix hotkeys and update policy editor name for new "Look Up Trusted Certificate" assertion
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@29736 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/console/src/main/java/com/l7tech/console/panels/LookupTrustedCertificateAssertionPropertiesDialog.form
+++ b/modules/gateway/console/src/main/java/com/l7tech/console/panels/LookupTrustedCertificateAssertionPropertiesDialog.form
@@ -51,12 +51,11 @@
         </constraints>
         <properties/>
       </component>
-      <component id="bc046" class="javax.swing.JLabel">
+      <component id="bc046" class="javax.swing.JLabel" binding="variableNameLabel">
         <constraints>
           <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="9" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <labelFor value="dd38f"/>
           <text resource-bundle="com/l7tech/console/panels/LookupTrustedCertificateAssertionPropertiesDialog" key="variable-name.label"/>
         </properties>
       </component>
