SSM-3511: fixed by allowing Issuer to be configurable in the Build SAML Protocol Response assertion. Context variables are supported. Add Issuer checkbox now enables the new text field which has a default value of <auto>, meaning to add the CN from configured private key's certificate. Added test coverage.
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@29757 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/assertions/SamlpAssertion/src/main/java/com/l7tech/external/assertions/samlpassertion/console/resources/SamlpResponseBuilderPropertiesDialog.form
+++ b/modules/gateway/assertions/SamlpAssertion/src/main/java/com/l7tech/external/assertions/samlpassertion/console/resources/SamlpResponseBuilderPropertiesDialog.form
@@ -87,6 +87,14 @@
                   </component>
                 </children>
               </grid>
+              <component id="80e73" class="javax.swing.JTextField" binding="customIssuerTextField">
+                <constraints>
+                  <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+                    <preferred-size width="150" height="-1"/>
+                  </grid>
+                </constraints>
+                <properties/>
+              </component>
             </children>
           </grid>
           <grid id="7468e" binding="responseStatusPanel" layout-manager="GridLayoutManager" row-count="3" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
