--- a/modules/gateway/assertions/SshAssertion/src/main/java/com/l7tech/external/assertions/ssh/console/SftpPollingListenerPropertiesDialog.form
+++ b/modules/gateway/assertions/SshAssertion/src/main/java/com/l7tech/external/assertions/ssh/console/SftpPollingListenerPropertiesDialog.form
@@ -421,7 +421,10 @@
                       </component>
                       <component id="f3116" class="javax.swing.JComboBox" binding="serviceNameComboBox">
                         <constraints>
-                          <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
+                          <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="1" indent="0" use-parent-layout="false">
+                            <minimum-size width="100" height="-1"/>
+                            <preferred-size width="200" height="-1"/>
+                          </grid>
                         </constraints>
                         <properties/>
                       </component>
