SSG-4730: fixed by allow the Audience field to reference multiple URIs either statically or via variable (single or multi valued) references. Static and resolved values are split on white spaces. Removed TextUtils.getTokensFromString and replaced single usage with TextUtils.split. Added test coverage for changes. Added utility methods for squiggly fields which validate URIs.
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@29893 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/console/src/main/java/com/l7tech/console/panels/saml/resources/ConditionsWizardStepPanel.form
+++ b/modules/gateway/console/src/main/java/com/l7tech/console/panels/saml/resources/ConditionsWizardStepPanel.form
@@ -97,9 +97,9 @@
               <text value="&amp;Audience Restriction"/>
             </properties>
           </component>
-          <component id="88805" class="javax.swing.JTextField" binding="textFieldAudienceRestriction">
+          <component id="d61df" class="com.l7tech.gui.widgets.SquigglyTextField" binding="textFieldAudienceRestriction">
             <constraints>
-              <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
+              <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties/>
           </component>
