SSM-3540: add context variable validation
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@29991 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/console/src/main/java/com/l7tech/console/panels/ThroughputQuotaQueryPropertiesDialog.form
+++ b/modules/gateway/console/src/main/java/com/l7tech/console/panels/ThroughputQuotaQueryPropertiesDialog.form
@@ -29,26 +29,23 @@
       </component>
       <component id="4721" class="javax.swing.JLabel">
         <constraints>
-          <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="9" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <labelFor value="f19c7"/>
           <text value="Variable &amp;Prefix:"/>
         </properties>
-      </component>
-      <component id="f19c7" class="javax.swing.JTextField" binding="variablePrefixField">
-        <constraints>
-          <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-            <preferred-size width="150" height="-1"/>
-          </grid>
-        </constraints>
-        <properties/>
       </component>
       <vspacer id="8b715">
         <constraints>
           <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
         </constraints>
       </vspacer>
+      <component id="cba55" class="com.l7tech.console.panels.TargetVariablePanel" binding="variablePrefixPanel">
+        <constraints>
+          <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties/>
+      </component>
     </children>
   </grid>
 </form>
