--- a/modules/gateway/assertions/RateLimitAssertion/src/main/java/com/l7tech/external/assertions/ratelimit/console/RateLimitQueryPropertiesDialog.form
+++ b/modules/gateway/assertions/RateLimitAssertion/src/main/java/com/l7tech/external/assertions/ratelimit/console/RateLimitQueryPropertiesDialog.form
@@ -42,18 +42,15 @@
           </component>
           <component id="376f2" class="javax.swing.JLabel">
             <constraints>
-              <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+              <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="9" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <labelFor value="8f190"/>
               <text value="Variable &amp;Prefix:"/>
             </properties>
           </component>
-          <component id="8f190" class="javax.swing.JTextField" binding="variablePrefixField">
+          <component id="250fa" class="com.l7tech.console.panels.TargetVariablePanel" binding="variablePrefixField">
             <constraints>
-              <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-                <preferred-size width="150" height="-1"/>
-              </grid>
+              <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="7" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties/>
           </component>
