MQ clean up, update UI to use "MQ Native" more consistently, remove unused extra properties panel, javadoc for routing assertion, create immutable bean for server config property registration.
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@30517 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/assertions/MqNativeAssertion/src/main/java/com/l7tech/external/assertions/mqnative/console/MqNativeRoutingAssertionDialog.form
+++ b/modules/gateway/assertions/MqNativeAssertion/src/main/java/com/l7tech/external/assertions/mqnative/console/MqNativeRoutingAssertionDialog.form
@@ -57,7 +57,7 @@
             </constraints>
             <properties>
               <labelFor value="3c825"/>
-              <text value="M&amp;Q Queues:"/>
+              <text value="M&amp;Q Native Queues:"/>
             </properties>
           </component>
           <component id="20964" class="javax.swing.JButton" binding="newQueueButton">
