SSG-5407: Changed the behavior according to func spec: if "Fail if multiple certificates are found" is selected do not allow multiple certificates with the same name. Default is unchecked.
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@30540 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/console/src/main/java/com/l7tech/console/panels/LookupTrustedCertificateAssertionPropertiesDialog.form
+++ b/modules/gateway/console/src/main/java/com/l7tech/console/panels/LookupTrustedCertificateAssertionPropertiesDialog.form
@@ -30,7 +30,7 @@
         </constraints>
         <properties/>
       </component>
-      <component id="657e8" class="javax.swing.JCheckBox" binding="allowMultipleCertificatesCheckBox" default-binding="true">
+      <component id="657e8" class="javax.swing.JCheckBox" binding="failMultipleCertificatesCheckBox">
         <constraints>
           <grid row="2" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
